--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -2,6 +2,8 @@
 {% extends 'dashboard/main_dashboard.html' %}
 
 {% block content %}
-    <!-- Add content specific to the profile section -->
+    <h2 class="profile-heading">Profile</h2>
+    <p class="profile-data">Username: {{ profile_data.username }}</p>
+    
+    <!-- Add more fields as needed -->
 {% endblock %}
-
