--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Welcome, {{ session['username'] }}!</h1>
-    <p>This is your dashboard.</p>
+    <h1 class="profile-heading">Welcome, {{ session['username'] }}!</h1>
+    <p class="profile-data">This is your dashboard.</p>
     <!-- Add more content as needed -->
 </body>
 </html>
