--- a/templates/dashboard/main_dashboard.html
+++ b/templates/dashboard/main_dashboard.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Add your head content -->
     <title>Main Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Welcome, {{ session['username'] }}!</h1>
